Fixed layout  bugs on mobile

--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@
 	font-size: 100%;
 }
 
+html, body{
+	height: 100%;
+	width: 100%;
+	margin: 0;
+	padding: 0;
+}
 html{
 	background: 
 		linear-gradient(
@@ -16,12 +22,6 @@ html{
 		url('city.jpg')
 		no-repeat;
  	background-size: cover;
-}
-html, body{
-	height: 100%;
-	width: 100%;
-	margin: 0;
-	padding: 0;
 }
 
 ul{
@@ -54,13 +54,11 @@ a{
 .l-header{
 	grid-area: l-header;
 	display: grid;
-	width: 100%;
 }
 
 .l-main{
 	grid-area: l-main;
 	display: grid;
-	width: 100%;
 	align-items: center;
 	justify-items: center;
 }
@@ -86,7 +84,7 @@ a{
 .nav_bar a{
 	display: grid;
 	align-items: center;
-	justify-items: center;
+	text-align: center;
 	color: white;
 	text-shadow: 2px 2px black;
 }
@@ -135,7 +133,7 @@ a{
 /* Media Queries */
 @media (min-width: 768px){
 	.l-header{
-		grid-template-columns: max-content 500px;
+		grid-template-columns: 268px 500px;
 		grid-template-areas: "logo nav_bar";
 		justify-content: space-between;
 	}
@@ -145,7 +143,7 @@ a{
 		display: grid;
 		height: 100%;
 		align-items: center;
-		padding: 0 30px 0 30px;
+		justify-items: center;
 		color: white;
 		text-shadow: 2px 2px black;
 		background-color: black;
